fix-basket-wrap

--- a/src/sass/layout/_header.sass
+++ b/src/sass/layout/_header.sass
@@ -3,6 +3,7 @@
    width: 100%
    z-index: 999
    background: #FBFAFA
+   
    &__adaptive-block
     display: flex
     justify-content: space-between
@@ -76,22 +77,10 @@
       +min_fullHd
         display: flex
         justify-content: space-between
-        // align-items: center
-      
 
    &__nav
     display: flex
     align-items: center
-    +min_sm
-    +min_md
-    +min_lg
-    +min_xl
-    +min_xxl
-      padding-left: 70px
-      padding-right: 70px
-    +min_fullHd
-      padding-left: 90px
-      padding-right: 90px
 
    &__basket-lang-wrap
      display: flex
@@ -104,9 +93,9 @@
     +min_lg
     +min_xl
     +min_xxl
-      gap: 90px
+      gap: 60px
     +min_fullHd
-      gap: 100px
+      gap: 80px
     a
       position: relative
       text-decoration: none
@@ -197,8 +186,8 @@
       background: #DA7B26
       display: flex
       justify-content: center
-      padding: 69px 62px 68px 61px
-      width: 166px
+      // padding: 69px 62px 68px 61px
+      // width: 166px
       text-decoration: none
       // height: 166px
       +min_sm
@@ -211,8 +200,8 @@
         align-items: center
         gap: 180px
         // height: 166px
-        max-width: 346px
-        width: 100%
+        // max-width: 346px
+        // width: 100%
         padding-left: 70px
         padding-right: 70px
       &:hover
